static/main.css
/* ... */
html, body {
  height: 100%;
}
html {
  --bg: transparent;
  --bg-dark: transparent;
  --header: transparent;
  --header-dark: transparent;
}
body {
  -webkit-tap-highlight-color: transparent;
  background: var(--bg);
  &:where(.dark *) {
    background: var(--bg-dark);
  }
}
.not-ready * {
  transition-property: none !important;
}
article {
  font-size: var(--text-lg);
  line-height: var(--tw-leading, var(--text-lg--line-height));
  *, ::before, ::after {
    unicode-bidi: plaintext;
  }
  .footnote-definition {
    display: flex;
    p {
      margin: calc(var(--spacing) * 0);
    }
    .footnote-definition-label {
      position: static;
      margin-right: calc(var(--spacing) * 2);
      font-size: var(--text-base);
      line-height: var(--tw-leading, var(--text-base--line-height));
      &::after {
        --tw-content: '.';
        content: var(--tw-content);
      }
    }
  }
  pre {
    font-size: var(--text-base);
    line-height: var(--tw-leading, var(--text-base--line-height));
    mark {
      margin-inline: -18px;
      margin-block: calc(var(--spacing) * 0);
      display: block;
      padding-inline: 18px;
      padding-block: calc(var(--spacing) * 0);
      color: inherit;
    }
    table {
      margin: calc(var(--spacing) * 0);
      width: 100%;
      border-collapse: collapse;
      font-size: var(--text-base);
      line-height: var(--tw-leading, var(--text-base--line-height));
      tr {
        border-style: var(--tw-border-style);
        border-width: 0px;
        --tw-border-style: none;
        border-style: none;
      }
      td {
        padding: calc(var(--spacing) * 0);
        &:nth-of-type(1) {
          min-width: calc(var(--spacing) * 4);
          -webkit-user-select: none;
          user-select: none;
          mark {
            margin-right: calc(var(--spacing) * 0);
            padding-right: calc(var(--spacing) * 0);
          }
        }
        &:not(:nth-of-type(1)) {
          mark {
            margin-left: calc(var(--spacing) * 0);
            padding-left: calc(var(--spacing) * 0);
          }
        }
      }
    }
  }
  figure {
    max-width: 100%;
    svg {
      height: auto;
      max-width: 100%;
      color-scheme: light !important;
      &:where(.dark, .dark *) {
        color-scheme: dark !important;
      }
    }
  }
}
.header {
  background-color: var(--header);
  &:where(.dark *) {
    background: var(--header-dark);
  }
}

.btn-menu img {
  display: block;
  transition: filter 0.2s ease, opacity 0.2s ease;
}

.btn-menu img.cross-icon {
  display: none;
}

.dark .btn-menu img.cross-icon {
  filter: invert(100%);
}

.dark .btn-menu img.menu-icon {
  filter: invert(100%);
}

.btn-menu img.hidden {
  display: none !important;
}


/* .btn-menu {
  &::before, &::after {
    display: block;
    height: 2px;
    width: calc(var(--spacing) * 5);
    background-color: var(--color-black);
    --tw-duration: 200ms;
    transition-duration: 200ms;
    --tw-content: '';
    content: var(--tw-content);
  }
  &:where(.dark, .dark *) {
    &::before {
      content: var(--tw-content);
      --tw-invert: invert(100%);
      filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
    }
  }
  &:where(.dark, .dark *) {
    &::after {
      content: var(--tw-content);
      --tw-invert: invert(100%);
      filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
    }
  }
  &:where(.open *) {
    &::before {
      width: calc(var(--spacing) * 6);
      --tw-translate-y: 5.5px;
      translate: var(--tw-translate-x) var(--tw-translate-y);
      rotate: 45deg;
    }
    &::after {
      width: calc(var(--spacing) * 6);
      --tw-translate-y: calc(5.5px * -1);
      translate: var(--tw-translate-x) var(--tw-translate-y);
      rotate: calc(45deg * -1);
    }
  }
} */
.nav-wrapper {
  display: none;
  @media (width >= 64rem) {
    display: flex;
  }
  &:where(.open *) {
    display: flex;
  }
}
@property --tw-rotate-x {
  syntax: "*";
  inherits: false;
}
@property --tw-rotate-y {
  syntax: "*";
  inherits: false;
}
@property --tw-rotate-z {
  syntax: "*";
  inherits: false;
}
@property --tw-skew-x {
  syntax: "*";
  inherits: false;
}
@property --tw-skew-y {
  syntax: "*";
  inherits: false;
}
@property --tw-space-x-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@property --tw-backdrop-blur {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-brightness {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-contrast {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-grayscale {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-hue-rotate {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-invert {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-opacity {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-saturate {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-sepia {
  syntax: "*";
  inherits: false;
}
@property --tw-leading {
  syntax: "*";
  inherits: false;
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
@property --tw-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-shadow-color {
  syntax: "*";
  inherits: false;
}
@property --tw-shadow-alpha {
  syntax: "<percentage>";
  inherits: false;
  initial-value: 100%;
}
@property --tw-inset-shadow {
  syntax: "*";
  inherits: false;
  initial-value: 0 0 #0000;
}
@property --tw-inset-shadow-color {
  syntax: "*";
  inherits: false;
}
@property --tw-inset-shadow-alpha {
  syntax: "<percentage>";
  inherits: false;
  initial-value: 100%;
}
/* ... */

